--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,13 +17,13 @@ build:
 requirements:
   host:
     - pip
-    - python
+    - python >=3.6
   run:
     - h5py
     - matplotlib-base
     - numpy
     - pillow
-    - python
+    - python >=3.6
     - scipy
     - opencv
     - keras
